force-app/main/default/objects/Opportunity/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <formula>(Account.Owner.FirstName &amp; &quot; &quot; &amp; Account.Owner.LastName)</formula>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>