force-app/main/default/objects/Opportunity/fields/APS_number__c.field-meta.xml
<CustomField>
    <fullName>APS_number__c</fullName>
    <description>Field is mapped from Lead</description>
    <label>{Hidden}APS number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>