force-app/main/default/objects/Opportunity/fields/APT_Recommended_Pricing_Action__c.field-meta.xml
<CustomField>
    <fullName>APT_Recommended_Pricing_Action__c</fullName>
    <label>Recommended Pricing Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-Service</fullName>
            </value>
            <value>
                <fullName>Raise a PSR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>