force-app/main/default/objects/Opportunity/fields/APT_Revenue_Decrease__c.field-meta.xml
<CustomField>
    <fullName>APT_Revenue_Decrease__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Revenue Decrease</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>