force-app/main/default/objects/Opportunity/fields/APTMinimumMonthlySpend__c.field-meta.xml
<CustomField>
    <fullName>APTMinimumMonthlySpend__c</fullName>
    <description>Used to capture the minimum monthly spend at the proposal level for startrack products.</description>
    <inlineHelpText>Minimum monthly spend across ALL StarTrack Products</inlineHelpText>
    <label>StarTrack Minimum Monthly Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>