force-app/main/default/objects/Opportunity/fields/Bank_statements__c.field-meta.xml
<CustomField>
    <fullName>Bank_statements__c</fullName>
    <description>APMS requirement</description>
    <inlineHelpText>This field will be populated by SecurePay</inlineHelpText>
    <label>Bank statements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>