force-app/main/default/objects/Opportunity/fields/Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Business_Days__c</fullName>
    <description>Business days between opportunity is created to closed or, to date if an open opportunity. If closed date is back dated (less than created date), the business days will show as zero.</description>
    <formula>If(CloseDate &lt;datevalue(CreatedDate), 0,If(  IsClosed, (5 * ( FLOOR( (CloseDate - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( CloseDate - DATE( 1900, 1, 8), 7 ) ) )- 
(5 * ( FLOOR( ( datevalue(CreatedDate) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( datevalue(CreatedDate)- DATE( 1900, 1, 8), 7 ) )), 
1+ (5 * ( FLOOR( ( today() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( today()- DATE( 1900, 1, 8), 7 ) ) )- 
(5 * ( FLOOR( ( datevalue(CreatedDate) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( datevalue(CreatedDate)- DATE( 1900, 1, 8), 7 ) ) )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Business days between when the opportunity is created to when it is closed (or current date if the opportunity is still Open)</inlineHelpText>
    <label>Business Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>