force-app/main/default/objects/Opportunity/fields/Calculated_Sales_Stage_Number__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Sales_Stage_Number__c</fullName>
    <formula>CASE( StageName , &quot;Identify&quot;, 1, &quot;Qualify&quot;, 2, &quot;Propose&quot;, 3, &quot;Negotiate&quot;, 4, &quot;Closed Won&quot;, 5, &quot;Closed Lost&quot;, 6, 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Sales Stage Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>