force-app/main/default/objects/Opportunity/fields/Closed_Comments__c.field-meta.xml
<CustomField>
    <fullName>Closed_Comments__c</fullName>
    <inlineHelpText>What are the key lessons learnt from this Opportunity? Aligned to the Closed Reason, expand on why we Won or Lost (Data Quality Score – 5).</inlineHelpText>
    <label>Closed Comments</label>
    <type>TextArea</type>
</CustomField>