force-app/main/default/objects/Opportunity/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <inlineHelpText>Select a reason the opportunity is being closed. For Closed Duplicate, record the duplicate Opportunity number (Data Quality Score – 5)</inlineHelpText>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Capability</fullName>
            </value>
            <value>
                <fullName>Commercial or Legal terms</fullName>
            </value>
            <value>
                <fullName>Credit Application unsuccessful</fullName>
            </value>
            <value>
                <fullName>Functionality</fullName>
            </value>
            <value>
                <fullName>Implementation lead time</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Non-conforming Bid/tender</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product/Service - Delivery</fullName>
            </value>
            <value>
                <fullName>RFI / Tender withdrawn</fullName>
            </value>
            <value>
                <fullName>Strategic Decision</fullName>
            </value>
            <value>
                <fullName>Unable to Contact</fullName>
            </value>
            <value>
                <fullName>Incorrectly Qualified</fullName>
            </value>
            <value>
                <fullName>Duplicate Opportunity Exists</fullName>
            </value>
            <value>
                <fullName>Product Migration</fullName>
            </value>
            <value>
                <fullName>Channel Migration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>