force-app/main/default/objects/Opportunity/fields/Commit_to_close_by__c.field-meta.xml
<CustomField>
    <fullName>Commit_to_close_by__c</fullName>
    <label>Commit to close by</label>
    <type>Date</type>
</CustomField>