force-app/main/default/objects/Opportunity/fields/Commit_to_close_value__c.field-meta.xml
<CustomField>
    <fullName>Commit_to_close_value__c</fullName>
    <label>Commit to close value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>