force-app/main/default/objects/Opportunity/fields/Competitive_Advantage__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Advantage__c</fullName>
    <description>Phase 1 - Opportunity Assessment (PWC)

Identify whether our value proposition gives us a competitive offeringC</description>
    <inlineHelpText>Do we have a distinctive capability compared to the competition?</inlineHelpText>
    <label>Competitive Advantage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>