force-app/main/default/objects/Opportunity/fields/ConvertedLead__c.field-meta.xml
<CustomField>
    <fullName>ConvertedLead__c</fullName>
    <description>If this opportunity was created(or updated) by converting a lead, displays hyperlink to a report containing details of lead(s) converted into this opportunity. Users do not need to have &quot;View and Edit Converted Leads&quot; permission to view lead details on the report. Clicking on a converted lead on the report will take such users to the contact record instead of the lead.
Displays blank if opportunity hasn&apos;t been involved in a lead conversion.</description>
    <formula>IF(ISBLANK(Lead_ID__c), &quot;Not Available&quot;, HYPERLINK(&quot;/lightning/r/Report/00O1m000000shDNEAY/view?fv1=&quot;&amp;Lead_ID__c, &quot;View Lead&quot;, &quot;_self&quot;))</formula>
    <inlineHelpText>View converted lead details if this opportunity was created by lead conversion.</inlineHelpText>
    <label>Converted Lead</label>
    <type>Text</type>
</CustomField>