force-app/main/default/objects/Opportunity/fields/Count_of_Contract_End_Dates__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Contract_End_Dates__c</fullName>
    <label>Count of Contract End Dates</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Contract_End_Date__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>