force-app/main/default/objects/Opportunity/fields/Count_of_Opportunity_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Opportunity_Line_Items__c</fullName>
    <label>Count of Opportunity Line Items</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>