force-app/main/default/objects/Opportunity/fields/Created_By_Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Logged_In_User__c</fullName>
    <description>STP: Return true if the record is created by logged in user.</description>
    <formula>CreatedById  =  $User.Id</formula>
    <label>Created By Logged In User</label>
    <type>Checkbox</type>
</CustomField>