force-app/main/default/objects/Opportunity/fields/Data_Integrity_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Data_Integrity_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Integrity Compliance Acknowledgment</label>
    <type>Checkbox</type>
</CustomField>