force-app/main/default/objects/Opportunity/fields/Data_Quality_Description__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Description__c</fullName>
    <inlineHelpText>A list of fields/metrics that are required in order to achieve the maximum Data Quality Score.</inlineHelpText>
    <label>Data Quality Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>