force-app/main/default/objects/Opportunity/fields/Data_Quality_Score_Old__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Score_Old__c</fullName>
    <description>18/07/2013 This field stores the old that prior to changes of field type</description>
    <label>Data Quality Score Old</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>