force-app/main/default/objects/Opportunity/fields/Days_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Close__c</fullName>
    <description>Calculates the number of Business Days left between Today and the Close Date. If the Opportunity is Closed, the number is set to zero, otherwise the number will be negative</description>
    <formula>IF(
IsClosed = true,
0,
(5 * ( FLOOR( ( CloseDate - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( CloseDate - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) ) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the number of Business Days left between Today and the Close Date. If the Opportunity is Closed, the number is set to zero, otherwise the number will be negative</inlineHelpText>
    <label>Days to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>