force-app/main/default/objects/Opportunity/fields/DoNotUseAccountHierarchy__c.field-meta.xml
<CustomField>
    <fullName>DoNotUseAccountHierarchy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field to exclude the account records within the Account Hierarchy from the OPC calculation. Note any manually linked child accounts will still be included</description>
    <inlineHelpText>Check this field to exclude the account records within the Account Hierarchy from the OPC calculation. Note any manually linked child accounts will still be included</inlineHelpText>
    <label>Do not use account hierarchy</label>
    <type>Checkbox</type>
</CustomField>