force-app/main/default/objects/Opportunity/fields/ECLM_IsReview__c.field-meta.xml
<CustomField>
    <fullName>ECLM_IsReview__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ECLM field</description>
    <label>IsReview</label>
    <type>Checkbox</type>
</CustomField>