force-app/main/default/objects/Opportunity/fields/ECLM_Original_Opportunity_No__c.field-meta.xml
<CustomField>
    <fullName>ECLM_Original_Opportunity_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ECLM field</description>
    <label>Original Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Related Opportunity Details</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>