force-app/main/default/objects/Opportunity/fields/ECLM_Revenue_Category__c.field-meta.xml
<CustomField>
    <fullName>ECLM_Revenue_Category__c</fullName>
    <label>Revenue Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>