force-app/main/default/objects/Opportunity/fields/ECLM_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>ECLM_Review_Date__c</fullName>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>