force-app/main/default/objects/Opportunity/fields/ECLM_Review_Date_Changed__c.field-meta.xml
<CustomField>
    <fullName>ECLM_Review_Date_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ECLM field, turns to true if Review Date is changed from previous value.</description>
    <inlineHelpText>ECLM field, turns to true if Review Date is changed from previous value.</inlineHelpText>
    <label>Review Date Changed</label>
    <type>Checkbox</type>
</CustomField>