force-app/main/default/objects/Opportunity/fields/EFY__c.field-meta.xml
<CustomField>
    <fullName>EFY__c</fullName>
    <formula>IF(Modified_Contract_Start_Date__c = DATE((YEAR(TODAY())-1),07,01) , 364,
IF(End_of_CFY__c - Modified_Contract_Start_Date__c &lt; 0 , 0,
IF(End_of_CFY__c - Modified_Contract_Start_Date__c &lt; 365 ,
End_of_CFY__c - Modified_Contract_Start_Date__c, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EFY Days Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>