force-app/main/default/objects/Opportunity/fields/Expected_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Start_Date__c</fullName>
    <description>Phase 1 - Opportunity Assessment (PWC)

When will the opportunity start? What is the length of the project?</description>
    <label>Expected Start Date</label>
    <type>Date</type>
</CustomField>