force-app/main/default/objects/Opportunity/fields/Gov_Solutions_Category__c.field-meta.xml
<CustomField>
    <fullName>Gov_Solutions_Category__c</fullName>
    <inlineHelpText>•	Citizen Engagement Platform: Localised portal
•	eLicencing:
•	eVoting:
•	Marketplaces: Connecting citizens, small business &amp; gov
•	Other Gov Solutions: For TeS 
•	Payment Disbursement: 
•	Registry:</inlineHelpText>
    <label>Gov Solutions Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Citizen Engagement Platform</fullName>
            </value>
            <value>
                <fullName>eLicencing</fullName>
            </value>
            <value>
                <fullName>eVoting</fullName>
            </value>
            <value>
                <fullName>Marketplaces</fullName>
            </value>
            <value>
                <fullName>Other Gov Solutions</fullName>
            </value>
            <value>
                <fullName>Payment Disbursement</fullName>
            </value>
            <value>
                <fullName>Registry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>