force-app/main/default/objects/Opportunity/fields/Hidden_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Close_Date__c</fullName>
    <description>This date will capture the Close Date whenever it is updated.</description>
    <label>{Hidden} Close Date</label>
    <type>Date</type>
</CustomField>