force-app/main/default/objects/Opportunity/fields/Hidden_Competitor_Score__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Competitor_Score__c</fullName>
    <label>{Hidden} Competitor Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>