force-app/main/default/objects/Opportunity/fields/Hidden_Competitor_Score_Description__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Competitor_Score_Description__c</fullName>
    <label>{Hidden} Competitor Score Description</label>
    <type>TextArea</type>
</CustomField>