force-app/main/default/objects/Opportunity/fields/hidden_Complex_Product_Counter__c.field-meta.xml
<CustomField>
    <fullName>hidden_Complex_Product_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>{hidden} Complex Product Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>