force-app/main/default/objects/Opportunity/fields/Hidden_Lead_Creator_Name__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Lead_Creator_Name__c</fullName>
    <description>Need the value to populate the email template for the lead seeker program when triggered from the opportunity</description>
    <label>{Hidden} Lead Creator Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>