force-app/main/default/objects/Opportunity/fields/hidden_Lead_Seeker_Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>hidden_Lead_Seeker_Lead_Owner__c</fullName>
    <description>This field is used to capture the lead creator email</description>
    <label>{hidden}Lead Seeker Lead creator email</label>
    <type>Email</type>
</CustomField>