force-app/main/default/objects/Opportunity/fields/Hidden_PA_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Hidden_PA_First_Name__c</fullName>
    <description>Phase 2 - Hidden First Name for capturing a Person Account&apos;s First Name coming from the Lead</description>
    <label>{Hidden} PA First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>