force-app/main/default/objects/Opportunity/fields/Hidden_Restrict_Path_Closure__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Restrict_Path_Closure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is Hidden Field to Restrict the Usage of Path Button for Closing the Opportunity</description>
    <label>{Hidden} Restrict Path Closure</label>
    <type>Checkbox</type>
</CustomField>