force-app/main/default/objects/Opportunity/fields/IndirectCustomer__c.field-meta.xml
<CustomField>
    <fullName>IndirectCustomer__c</fullName>
    <description>calculated based on user input for “Has Ownership Over the Freight?” and “Has Control Over Lodgement Facility?”. Last modified Opp will update the field on the Account record.</description>
    <formula>IF(AND(NOT(ISBLANK(TEXT(FreightOwnership__c))),NOT(ISBLANK( TEXT(ControlsLodgement__c))), ISPICKVAL(FreightOwnership__c, &apos;Yes&apos;),ISPICKVAL(ControlsLodgement__c, &apos;Yes&apos;)) , &apos;No&apos;, 
IF(AND(NOT(ISBLANK(TEXT(FreightOwnership__c))),NOT(ISBLANK(TEXT(ControlsLodgement__c))),OR(ISPICKVAL(FreightOwnership__c, &apos;No (or unknown)&apos;),ISPICKVAL(ControlsLodgement__c, &apos;No (or unknown)&apos;))) , &apos;Yes&apos;, &apos;&apos;))</formula>
    <inlineHelpText>This field is set to ‘No’ by system if customer has ownership over the freight and control over lodgement facility. Otherwise it is set to ‘Yes’.</inlineHelpText>
    <label>Indirect Customer?</label>
    <type>Text</type>
</CustomField>