force-app/main/default/objects/Opportunity/fields/Is_Superseded_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Is_Superseded_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this box is checked, this opportunity has been superseded by a signed Deed of Variation (DoV)</inlineHelpText>
    <label>Superseded by DoV?</label>
    <type>Checkbox</type>
</CustomField>