force-app/main/default/objects/Opportunity/fields/KeyContact__c.field-meta.xml
<CustomField>
    <fullName>KeyContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2013-12-12 Louis Wang (Bluewolf)
Added to capture contact portion of Personal_Account__c (PA rollback)</description>
    <inlineHelpText>Primary customer  contact consulted or decision maker for this Opportunity  (Data Quality Score – 15)</inlineHelpText>
    <label>Key Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Key Contact)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>