force-app/main/default/objects/Opportunity/fields/kfsell__Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Last_Updated__c</fullName>
    <formula>kfsell__Blue_Sheet__r.LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>