force-app/main/default/objects/Opportunity/fields/LBP_Tier_1__c.field-meta.xml
<CustomField>
    <fullName>LBP_Tier_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Added as a part of STP LBP : Identify which Post Office is the LBP Tier 1 associated to the Opportunity</description>
    <inlineHelpText>The LPO for existing Tier 1 partners. Only applies to Local Business Partner opportunities.</inlineHelpText>
    <label>LBP Tier 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Network__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business Hub, Retail</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Network__c</referenceTo>
    <relationshipLabel>Opportunities (LBP Tier 1)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>