force-app/main/default/objects/Opportunity/fields/Lead_Seeker__c.field-meta.xml
<CustomField>
    <fullName>Lead_Seeker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field will be auto updated when a lead is converted</description>
    <inlineHelpText>Pre-filled automatically if this Opportunity was created from a  Lead submitted through the Seeker program.</inlineHelpText>
    <label>Lead Seeker</label>
    <type>Checkbox</type>
</CustomField>