force-app/main/default/objects/Opportunity/fields/LEGACY_ID__c.field-meta.xml
<CustomField>
    <fullName>LEGACY_ID__c</fullName>
    <description>DJK 05/10/2011</description>
    <externalId>true</externalId>
    <label>Opportunity Legacy Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>