force-app/main/default/objects/Opportunity/fields/Legacy_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Owner_Name__c</fullName>
    <label>Legacy Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>