force-app/main/default/objects/Opportunity/fields/mh_Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>mh_Additional_Notes__c</fullName>
    <label>Additional Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>