force-app/main/default/objects/Opportunity/fields/mh_Specify_Competitors__c.field-meta.xml
<CustomField>
    <fullName>mh_Specify_Competitors__c</fullName>
    <description>SAM Integration</description>
    <label>Specify Competitors</label>
    <type>TextArea</type>
</CustomField>