force-app/main/default/objects/Opportunity/fields/Modified_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Modified_Contract_Start_Date__c</fullName>
    <description>This is data field that is updated by a workflow which is used for Reporting. The field is used to populate the Re-modified Contract Start Mth formula field which is used for reporting.</description>
    <label>Modified Contract Start Date</label>
    <type>Date</type>
</CustomField>