force-app/main/default/objects/Opportunity/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <inlineHelpText>Related to the Sales Stage, this field identifies the next step required to be completed to progress the opportunity.</inlineHelpText>
    <label>Next Step</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Update opportunity details</fullName>
                <default>true</default>
                <label>Update opportunity details</label>
            </value>
            <value>
                <fullName>Identify and engage Specialist resources</fullName>
            </value>
            <value>
                <fullName>Prepare for initial customer meeting</fullName>
            </value>
            <value>
                <fullName>Contact internal resources to determine capabilities</fullName>
            </value>
            <value>
                <fullName>Confirm issues, needs and desired outcomes</fullName>
            </value>
            <value>
                <fullName>Identify opportunity risks and competitors</fullName>
            </value>
            <value>
                <fullName>Engage internal resources to develop solution</fullName>
            </value>
            <value>
                <fullName>Determine Go/No Go decision</fullName>
            </value>
            <value>
                <fullName>Develop proposal</fullName>
            </value>
            <value>
                <fullName>Refine proposal with internal stakeholders</fullName>
            </value>
            <value>
                <fullName>Present the proposal to the customer</fullName>
            </value>
            <value>
                <fullName>Obtain verbal agreement</fullName>
            </value>
            <value>
                <fullName>Prepare contract</fullName>
            </value>
            <value>
                <fullName>Negotiate to achieve alignment</fullName>
            </value>
            <value>
                <fullName>Seek assistance to close the deal</fullName>
            </value>
            <value>
                <fullName>Finalise contract terms &amp; conditions</fullName>
            </value>
            <value>
                <fullName>Present final contract to customer</fullName>
            </value>
            <value>
                <fullName>Confirm agreement with final contract terms</fullName>
            </value>
            <value>
                <fullName>Sign contract</fullName>
            </value>
            <value>
                <fullName>Review outcome and lesson&apos;s learnt</fullName>
            </value>
            <value>
                <fullName>Commence implementation</fullName>
            </value>
            <value>
                <fullName>No further action</fullName>
            </value>
            <value>
                <fullName>Revisit opportunity in 6 months</fullName>
            </value>
            <value>
                <fullName>Revisit opportunity in 12 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>