force-app/main/default/objects/Opportunity/fields/Offering_Type__c.field-meta.xml
<CustomField>
    <fullName>Offering_Type__c</fullName>
    <description>Used to indicate if this opportunity belongs to the product or solutions offering. Workflow is used to populate this field but can be overwritten.</description>
    <inlineHelpText>Indicate whether this opportunity is a singular product or multi product solution.</inlineHelpText>
    <label>Offering Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>