force-app/main/default/objects/Opportunity/fields/Offline_Contract_Received__c.field-meta.xml
<CustomField>
    <fullName>Offline_Contract_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Override for when Offline contract has been received</description>
    <label>Offline Contract Received</label>
    <type>Checkbox</type>
</CustomField>