force-app/main/default/objects/Opportunity/fields/Opportunity_Closed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Closed_Date_Time__c</fullName>
    <inlineHelpText>Opportunity Closed date/time</inlineHelpText>
    <label>Opportunity Closed Date/Time</label>
    <type>DateTime</type>
</CustomField>