force-app/main/default/objects/Opportunity/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>A unique reference number for this opportunity</inlineHelpText>
    <label>Opportunity Number</label>
    <type>AutoNumber</type>
</CustomField>